Added test integracion